# meridian

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY.md  Dockerfile  LICENSE  MISTAKES.md  Makefile  README.md  SECURITY.md  SESSIONS.md  docker-compose.coexist.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
data/: disruption_labels.csv  sample_erp_tiers.csv  sample_suppliers.csv  wgi_stability.json
docs/: ARCHITECTURE_DEMO.md  ARCHITECTURE_FOR_CONTRIBUTORS.md  CAUSAL_SCOPE.md  CODEBASE_AUDIT.md  DEMO.md  DEPLOY_QUICKSTART.md  ERP_INGEST.md  GEOPOLITICAL_TRANSPORT_ANALYSIS.md  LIMITATIONS.md  METRICS.md  QUICKSTART.md  REAL_DATA_PHASE_A.md  REAL_DATA_PHASE_B.md  REAL_DATA_PHASE_C.md  RISK_INTELLIGENCE_PHASE2.md  ROADMAP_FLAW_FIXES.md  TGN_RESEARCH.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
nginx/: nginx.conf
scripts/: backtest_scri.py  check_deploy_config.sh  collect_causal_pairs.py  demo.sh  export_graph_snapshots.py  fetch_wgi_stability.py  index_graph_communities.py  index_rag_corpus.py  ingest_erp_csv.py  init_timescale.sql  pipeline_batch.py  pipeline_refresh.py  prepare_tgn_training.py  record_demo.sh  rescore_on_events.py  score_suppliers.py  seed_demo_scenarios.py  seed_routes.py  seed_suppliers.py  test_all.py  test_api.sh  (+4 more)
(+160 files in other folders)
